--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mabi87.imageloadersample" >
+    package="com.mabi87.imageloadersample">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.mabi87.imageloadersample.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.mabi87.imageloadersample.ListActivity"
+            android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.mabi87.imageloadersample.ListActivity" >
-        </activity>
-        <activity
-            android:name="com.mabi87.imageloadersample.DetailActivity" >
-        </activity>
+        <activity android:name="com.mabi87.imageloadersample.DetailActivity"></activity>
     </application>
 
 </manifest>
